<resources>
    <string name="app_name">廚事寶智慧廚電</string>
    <string name="backend_server_oauth_client_id">572738086053-2g7pssq2gtakh69jqiveenlvrk7qekl0.apps.googleusercontent.com</string>
    <string name="register">註冊</string>
    <string name="login">登入</string>
    <string name="password">密碼</string>
    <string name="email">電子信箱</string>
    <string name="keep_login">保持登入狀態</string>
    <string name="forget_password">忘記密碼?</string>
    <string name="forget_password2">忘記密碼</string>
    <string name="not_member">還不是豪星的會員嗎?</string>
    <string name="next_step">下一步</string>
    <string name="or">或</string>
    <string name="forget_password_mail_sent">已將密碼修改連結發至以下的Email</string>
    <string name="goto_mail_verify">請至信箱點擊連結進行驗證</string>
    <string name="back_to_login">返回登入頁</string>

    <string name="hello_blank_fragment">Hello</string>
    <string name="create_account">創建帳號</string>
    <string name="enter_your_account">請輸入您的帳號</string>
    <string name="enter_verify_code">輸入驗證碼</string>
    <string name="code_sent">驗證碼已發送至</string>
    <string name="verify_code_not_sent">未收到驗證碼？</string>
    <string name="get_new_verify_code">取得新的驗證碼</string>
    <string name="setup_password">設定密碼</string>
    <string name="confirm">確定</string>
    <string name="input_six_eight_password">請輸入6-8位數密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="i_agree_customer">我同意客戶</string>
    <string name="privacy">隱私權條款</string>
    <string name="register_success">註冊成功</string>
    <string name="active_email_sent">已將啟用連結發至以下的Email：</string>
    <string name="goto_email_active">請至信箱啟用帳號後進行登入</string>
    <string name="setup_user_info">填寫個人資料</string>
    <string name="user_info">用戶資訊</string>
    <string name="fill_more_info">請填入更多資訊，方便我們聯繫您。</string>
    <string name="name">名字</string>
    <string name="location">地區</string>
    <string name="phone">電話號碼</string>
    <string name="finished">完成</string>
    <string name="agree">同意</string>
    <string name="privacy_content">
        經由您書面同意。
        法律明文規定。
        為免除您生命、身體、自由或財產上之危險。
        與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集者依其揭露方式無從識別特定之當事人。
        當您在網站的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。
        有利於您的權益。
        本網站委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。
        六、Cookie之使用
        為了提供您最佳的服務，本網站會在您的電腦中放置並取用我們的Cookie，若您不願接受Cookie的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕Cookie的寫入，但可能會導致網站某些功能無法正常執行 。

        七、隱私權保護政策之修正
        本網站隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。
    </string>
    <string name="back">返回</string>
    <string name="login_fail">登入失敗</string>
    <string name="system_maintain_login_later">系統維護中，請稍候登入</string>
    <string name="wrong_account_password">錯誤的帳號或密碼</string>
    <string name="not_verify_yet">尚未驗證？</string>
    <string name="resend_email">重新寄信</string>
    <string name="goto_mail_active_account">請至信箱啟用帳號後進行登入</string>
    <string name="password_need_six_eighteen">密碼需要6-18位數密碼</string>
    <string name="password_not_same">密碼不符</string>
    <string name="save">儲存</string>
    <string name="cancel">取消</string>
    <string name="canceled">已取消</string>
    <string name="suggest_less_50"><![CDATA[飲用水建議<50]]></string>
    <string name="delete">刪除</string>

    <string-array name="week_day_label">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>


</resources>