<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.SetupPasswordFragment">

    <ImageView
        android:layout_width="148dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="83dp"
        android:text="@string/setup_password"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.clockworkorange.haohsing.ui.widget.CustomEditText
        android:id="@+id/et_password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="219dp"
        app:endButtonType="DisplayPassword"
        app:headIcon="@drawable/ic_lock"
        app:hint="@string/input_six_eight_password"
        app:inputType="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.clockworkorange.haohsing.ui.widget.CustomEditText
        android:id="@+id/et_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:endButtonType="DisplayPassword"
        app:headIcon="@drawable/ic_lock"
        app:hint="@string/confirm_password"
        app:inputType="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password1" />

    <CheckBox
        android:id="@+id/cb_agree_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:buttonTint="@color/colorPrimary"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/i_agree_customer"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/et_password2" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        app:layout_constraintTop_toTopOf="@id/cb_agree_privacy"
        app:layout_constraintBottom_toBottomOf="@id/cb_agree_privacy"
        app:layout_constraintStart_toEndOf="@id/cb_agree_privacy"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="4dp"
        android:textSize="14sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/tv_privacy"
        app:layout_constraintEnd_toEndOf="@id/tv_privacy"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy" />

    <Button
        android:id="@+id/bt_agree"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="44dp"
        android:enabled="false"
        android:includeFontPadding="false"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>