<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="148dp"
                android:layout_height="26dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="78dp"
                android:text="@string/login"
                android:textColor="@color/colorText"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.clockworkorange.haohsing.ui.widget.CustomEditText
                android:id="@+id/et_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="172dp"
                android:layout_marginEnd="20dp"
                app:headIcon="@drawable/ic_email"
                app:hint="@string/email"
                app:inputType="Email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.clockworkorange.haohsing.ui.widget.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                app:endButtonType="DisplayPassword"
                app:headIcon="@drawable/ic_lock"
                app:hint="@string/password"
                app:inputType="Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_mail" />

            <CheckBox
                android:id="@+id/cb_keep_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/colorPrimary"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/keep_login"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textAppearance="@style/TextAppearance.HAOHSING.Body2"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/cb_keep_login"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintTop_toTopOf="@id/cb_keep_login" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:enabled="false"
                android:includeFontPadding="false"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine3"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="28dp"
                android:text="@string/not_member"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_login" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine4"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_member"
                app:layout_constraintStart_toEndOf="@id/tv_member"
                app:layout_constraintTop_toTopOf="@id/tv_member" />

            <View
                android:layout_width="136dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:background="#808080"
                app:layout_constraintBottom_toBottomOf="@id/tv_or"
                app:layout_constraintEnd_toStartOf="@id/tv_or"
                app:layout_constraintTop_toTopOf="@id/tv_or" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:includeFontPadding="false"
                android:text="@string/or"
                android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_register" />

            <View
                android:layout_width="136dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="#808080"
                app:layout_constraintBottom_toBottomOf="@id/tv_or"
                app:layout_constraintStart_toEndOf="@id/tv_or"
                app:layout_constraintTop_toTopOf="@id/tv_or" />

            <ImageButton
                android:id="@+id/bt_google_login"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="35dp"
                android:background="@null"
                android:src="@drawable/ic_google"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginEnd="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                app:layout_constraintEnd_toStartOf="@id/bt_apple_login" />

            <ImageButton
                android:id="@+id/bt_apple_login"
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@drawable/ic_apple"
                android:background="@null"
                app:layout_constraintStart_toEndOf="@id/bt_google_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/bt_google_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/il_loading"
        layout="@layout/layout_loading"
        android:visibility="gone" />

</FrameLayout>
