<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.login.VerifyRegisterCodeFragment">

    <ImageView
        android:layout_width="148dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="83dp"
        android:text="@string/enter_verify_code"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_code_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="153dp"
        android:includeFontPadding="false"
        android:text="@string/code_sent"
        android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:includeFontPadding="false"
        android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/tv_code_sent"
        app:layout_constraintStart_toEndOf="@id/tv_code_sent"
        app:layout_constraintTop_toTopOf="@id/tv_code_sent"
        tools:text="test@mail.com" />

    <EditText
        android:id="@+id/et_verify_code"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_custom_edittext"
        android:hint="驗證碼"
        android:maxLines="1"
        android:inputType="numberSigned"
        android:includeFontPadding="false"
        android:paddingStart="23dp"
        android:paddingEnd="23dp"
        android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_mail" />

    <TextView
        android:id="@+id/tv_code_not_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:text="@string/verify_code_not_sent"
        android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine3"
        app:layout_constraintEnd_toStartOf="@id/tv_resent_code"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_verify_code" />

    <TextView
        android:id="@+id/tv_resent_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:text="@string/get_new_verify_code"
        android:textAppearance="@style/TextAppearance.HAOHSING.HeadLine3"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_code_not_sent"
        app:layout_constraintTop_toBottomOf="@id/et_verify_code" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="44dp"
        android:enabled="false"
        android:includeFontPadding="false"
        android:text="@string/next_step"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>